[fix] gap bt newsletter input/submit

--- a/src/assets/css/scss/_footer.scss
+++ b/src/assets/css/scss/_footer.scss
@@ -43,7 +43,7 @@
     -webkit-appearance: none;
     border: none;
     padding: 0.6rem 1rem 0.6rem 0rem;
-    margin-right: -4px;
+    margin-right: -5px;
 
     border-bottom: 1px solid rgba(color(dark-gray), 1);
     background: transparent;
