--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -792,7 +792,7 @@ strong {
   -webkit-appearance: none;
   border: none;
   padding: 0.6rem 1rem 0.6rem 0rem;
-  margin-right: -4px;
+  margin-right: -5px;
   border-bottom: 1px solid #515762;
   background: transparent;
   color: #515762;
